ex0227 수업 내용- MySQL